stylesheet.css
:root {
	--background: rgb(238 238 238);
	--menu: rgb(242, 242, 242);
    --secondary-menu: rgb(200 200 200);
	--text: rgb(60, 60, 60);
	--shadow: rgb(0 0 0 / 15%);
	--accent: rgb(40, 190, 228);
	--on-hover: rgb(218 222 225);

    --editor-font-family: "Fira Code";
    --editor-font-size: 13px;
    --editor-font-weight: 400;
}

body, html {
	height: 100%;
	width: 100%;
	margin: 0;
	overflow: hidden;
	background-color: var(--background);
}

/*#region  Scroll Bar   */
::-webkit-scrollbar {
	width: 10px;
	height: 10px;
}

::-webkit-scrollbar-corner {
	display: none;
}

::-webkit-scrollbar-track {
	margin-top: 7vh;
	margin-bottom: 1vh;
	background: var(--menu);
	border-radius: 8px;
	opacity: 60%;
}

::-webkit-scrollbar-thumb {
	background-color: var(--on-hover);
	scroll-behavior: smooth;
	border-radius: 10px;
	opacity: 80%;
}

::-webkit-scrollbar-thumb:hover {
	background-color: var(--accent);
}
/*#endregion*/

#main-menu {
	position: absolute;
	top: 2vh;
	left: 1vw;
	height: 6vh;
	width: 90vw;
	z-index: 10;
	padding: 0 4vw 0 4vw;
	border-radius: 20px; /*8px*/
	background-color: var(--menu);
	box-shadow: 0 0 4px var(--shadow);
	cursor: default;
}

.main-button {
	display: inline-block;
	height: 6vh;
	width: 6vw;
	border: none;
	outline: none;
	border-radius: 8px;
	background-color: var(--menu);
	color: var(--text);
	font-family: system-ui;
	font-weight: 300;
	font-size: 2.5vh;
	text-align: center;
	line-height: 6vh;
	user-select: none;
	transition: background-color 100ms ease-in-out;
}

.main-hover-menu {
	display: none;
	position: fixed;
	height: calc(40vh - 8px);
	width: calc(16vw - 8px);
	top: 8vh;
	margin-left: -0.4vw;
	padding: 4px;
	border-radius: 4px;
	background-color: var(--menu);
	box-shadow: 0 0 4px var(--shadow);
}

.main-hover-button {
	display: inherit;
	height: 3.5vh;
	width: calc(16vw - 8px);
	border: none;
	outline: none;
	border-radius: 4px;
	background-color: var(--menu);
	color: var(--text);
	font-family: system-ui;
	font-weight: 300;
	font-size: 1.75vh;
	line-height: 101%;
	cursor: pointer;
	transition: background-color 100ms ease-in-out;
}

#file-display {
    position: absolute;
    height: 88vh;
    width: 11vw;
    top: 10vh;
    left: 1vw;
    border-radius: 8px;
    background-color: var(--secondary-menu);
}

#editor {
	display: inline-block;
	height: 82vh;
	width: 70vw;
	margin-top: 2vh;
    margin-left: 16vw;
	padding-top: 8vh;
	padding-bottom: 8vh;
	resize: none;
	border: none;
	outline: none;
	overflow: overlay;
	overflow-wrap: unset;
	white-space: pre;
	background-color: var(--background);
	color: var(--text);
	font-family: var(--editor-font-family);
	font-size: var(--editor-font-size);
	font-weight: var(--editor-font-weight);
	line-height: 18px;
	tab-size: 5;
}

#line-display {
	position: absolute;
	height: 82vh;
	width: 4vw;
	top: 2vh;
	left: 12vw;
	padding-top: 8vh;
	padding-bottom: 8vh;
	text-align: center;
	overflow: hidden;
}

.main-button:hover, .main-hover-button:hover {
	background-color: var(--on-hover);																									  
}

/*#region Code Syntax*/
.line {
    height: 18px;
    opacity: 60%;
    background-color: transparent;
	color: var(--text);
	font-family: var(--editor-font-family);
	font-size: var(--editor-font-size);
	font-weight: var(--editor-font-weight);
	line-height: 18px;
}

.code-line {
    height: 18px;
    width: 70vw;
}

.symbol {
    color: var(--text);
}

.number {
	color: rgb(58, 186, 152);
}

.keyword {
    color: rgb(197 134 192);
}

.identifier {
    color: rgb(65, 121, 224);/*rgb(109, 147, 218);*/
}

.string {
    color: rgb(206 145 120);
}

.comment {
    color: rgb(106 153 85);
}

/*#endregion*/

